--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
+  "name": "@hobroker/selfhosted",
+  "version": "1.0.0",
+  "description": "Generate docs from charts to the main README.md",
+  "author": "Igor Leahu <igor.leahu24@gmail.com>",
   "devDependencies": {
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0"
   },
   "scripts": {
-    "prepare": "husky install",
-    "generate": "node docs/src/index.mjs"
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "*.md": "npm run generate"
+    "*.md": "selfhosted-docs"
   },
   "workspaces": [
-    "docs"
+    "packages/docs"
   ]
 }
