--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -8,6 +8,7 @@
     "selfhosted-docs": "src/index.mjs"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "markdown-table": "^3.0.3"
   }
 }
