--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Generate docs from charts to the main README.md",
   "author": "Igor Leahu <igor.leahu24@gmail.com>",
   "devDependencies": {
-    "husky": "^9.0.0",
-    "lint-staged": "^15.2.0"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "generate": "npx tsx packages/docs/src/index.ts"
   },
   "lint-staged": {
