--- a/charts/media/radarr/values.yaml
+++ b/charts/media/radarr/values.yaml
@@ -7,7 +7,7 @@ controllers:
       main:
         image:
           repository: linuxserver/radarr
-          tag: 5.2.6
+          tag: 5.4.6-develop
           pullPolicy: IfNotPresent
         env:
           PGID: "1000"
