fix wakatime-exporter monitoring

--- a/charts/monitoring/open-telemetry/values.yaml
+++ b/charts/monitoring/open-telemetry/values.yaml
@@ -8,3 +8,5 @@ manager:
     enabled: true
   prometheusRule:
     enabled: true
+  collectorImage:
+    repository: "otel/opentelemetry-collector-contrib"
