fix: chart apprise/rsnapshot/syncthing

--- a/charts/automation/syncthing/values.yaml
+++ b/charts/automation/syncthing/values.yaml
@@ -12,6 +12,7 @@ controllers:
 
 service:
   main:
+    controller: main
     type: LoadBalancer
     ports:
       http:
@@ -51,11 +52,10 @@ persistence:
 ingress:
   main:
     enabled: true
-    ingressClassName: "traefik"
     hosts:
       - host: syncthing.hobroker.me
         paths:
           - path: /
             pathType: Prefix
             service:
-              name: main
+              identifier: main
