--- a/charts/media/radarr/values.yaml
+++ b/charts/media/radarr/values.yaml
@@ -12,6 +12,12 @@ controllers:
         env:
           PGID: "1000"
           PUID: "1000"
+    initContainers:
+      wait-for-service:
+        image:
+          repository: ghcr.io/hobroker/wait-for-service
+          tag: latest
+        args: ["qbittorrent", "prowlarr"]
   metrics:
     containers:
       main:
@@ -31,7 +37,6 @@ controllers:
 
 service:
   main:
-    controller: main
     type: LoadBalancer
     ports:
       http:
@@ -73,10 +78,11 @@ persistence:
 ingress:
   main:
     enabled: true
+    ingressClassName: "traefik"
     hosts:
       - host: radarr.hobroker.me
         paths:
           - path: /
             pathType: Prefix
             service:
-              identifier: main
+              name: main
