--- a/charts/media/plex/values.yaml
+++ b/charts/media/plex/values.yaml
@@ -44,6 +44,7 @@ persistence:
 ingress:
   main:
     enabled: true
+    className: "traefik"
     hosts:
       - host: plex.hobroker.me
         paths:
