--- a/charts/media/sonarr/values.yaml
+++ b/charts/media/sonarr/values.yaml
@@ -1,6 +1,3 @@
-defaultPodOptions:
-  automountServiceAccountToken: false
-
 controllers:
   main:
     containers:
@@ -12,6 +9,12 @@ controllers:
         env:
           PGID: "1000"
           PUID: "1000"
+    initContainers:
+      wait-for-service:
+        image:
+          repository: ghcr.io/hobroker/wait-for-service
+          tag: latest
+        args: ["qbittorrent", "prowlarr-main"]
   metrics:
     containers:
       main:
