--- a/charts/downloads/qbittorrent/values.yaml
+++ b/charts/downloads/qbittorrent/values.yaml
@@ -45,6 +45,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: qbittorrent.hobroker.me
         paths:
