--- a/charts/system/reloader/helmfile.yaml
+++ b/charts/system/reloader/helmfile.yaml
@@ -1,9 +1,9 @@
 repositories:
-  - name: stakater
+  - name: reloader
     url: https://stakater.github.io/stakater-charts
 
 releases:
-  - name: stakater
+  - name: reloader
     version: 1.0.71
     atomic: true
     namespace: kube-system
