update traefik config

--- a/charts/system/traefik/helmfile.yaml
+++ b/charts/system/traefik/helmfile.yaml
@@ -3,6 +3,12 @@ repositories:
     url: https://helm.traefik.io/traefik
 
 releases:
+  - name: traefik-crds
+    version: 1.5.0
+    atomic: true
+    namespace: kube-system
+    chart: traefik/traefik-crds
+
   - name: traefik
     version: 34.4.1
     atomic: true
@@ -10,22 +16,3 @@ releases:
     chart: traefik/traefik
     values:
       - values.yaml
-    hooks:
-      - events:
-          - presync
-        showlogs: true
-        command: kubectl
-        args:
-          - apply
-          - -f
-          - https://raw.githubusercontent.com/traefik/traefik/v2.10/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
-          - -f
-          - https://raw.githubusercontent.com/traefik/traefik/v2.10/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
-      - events:
-          - postsync
-        showlogs: true
-        command: kubectl
-        args:
-          - apply
-          - -f
-          - middlewares/gzip-middleware.yaml
