remove `web` support from services and keep only `websecure`

--- a/charts/automation/syncthing/values.yaml
+++ b/charts/automation/syncthing/values.yaml
@@ -52,6 +52,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: syncthing.hobroker.me
         paths:
