--- a/charts/development/code-server/values.yaml
+++ b/charts/development/code-server/values.yaml
@@ -47,6 +47,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: code.hobroker.me
         paths:
