--- a/charts/media/overseerr/values.yaml
+++ b/charts/media/overseerr/values.yaml
@@ -29,6 +29,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: overseerr.hobroker.me
         paths:
