--- a/charts/media/plex/values.yaml
+++ b/charts/media/plex/values.yaml
@@ -44,6 +44,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     className: "traefik"
     hosts:
       - host: plex.hobroker.me
