--- a/charts/media/radarr/values.yaml
+++ b/charts/media/radarr/values.yaml
@@ -1,3 +1,6 @@
+defaultPodOptions:
+  automountServiceAccountToken: false
+
 controllers:
   main:
     containers:
@@ -70,6 +73,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: radarr.hobroker.me
         paths:
