--- a/charts/media/tautulli/values.yaml
+++ b/charts/media/tautulli/values.yaml
@@ -31,6 +31,8 @@ persistence:
 ingress:
   main:
     enabled: true
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
     hosts:
       - host: tautulli.hobroker.me
         paths:
