fix: exportarr not using correct service names

--- a/charts/downloads/prowlarr/values.yaml
+++ b/charts/downloads/prowlarr/values.yaml
@@ -19,7 +19,7 @@ controllers:
         args: ["prowlarr"]
         env:
           - name: URL
-            value: "http://prowlarr:9696"
+            value: "http://prowlarr-main:9696"
           - name: APIKEY
             valueFrom:
               secretKeyRef:
