fix: stakater/reloader not installing

--- a/charts/system/reloader/values.yaml
+++ b/charts/system/reloader/values.yaml
@@ -1,2 +1,9 @@
+image:
+  name: stakater/reloader
+  repository: stakater/reloader
+
 reloader:
   reloadOnCreate: true
+
+serviceMonitor:
+  enabled: true
