feat: remove prowlarr/code/bazarr/overseerr/tautulli from having a LB

--- a/charts/downloads/prowlarr/values.yaml
+++ b/charts/downloads/prowlarr/values.yaml
@@ -32,7 +32,7 @@ controllers:
 service:
   main:
     controller: main
-    type: LoadBalancer
+    type: ClusterIP
     ports:
       http:
         port: 9696
