--- a/charts/media/tautulli/values.yaml
+++ b/charts/media/tautulli/values.yaml
@@ -13,7 +13,7 @@ controllers:
 service:
   main:
     controller: main
-    type: LoadBalancer
+    type: ClusterIP
     ports:
       http:
         port: 8181
