--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "strict": true,
     "target": "esnext",
-    "types": ["node"],
+    "types": ["node"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
