fix: qBittorrent config wasn't persistent

--- a/charts/downloads/qbittorrent/values.yaml
+++ b/charts/downloads/qbittorrent/values.yaml
@@ -54,7 +54,7 @@ persistence:
     type: hostPath
     hostPath: /appdata/k3s/qbittorrent
     globalMounts:
-      - path: /config
+      - path: /config/qBittorrent
   blackhole:
     enabled: true
     type: hostPath
