feat!: replace app-template chart repo URL

--- a/charts/media/jellyfin/helmfile.yaml
+++ b/charts/media/jellyfin/helmfile.yaml
@@ -1,6 +1,6 @@
 repositories:
   - name: bjw-s
-    url: https://bjw-s.github.io/helm-charts
+    url: https://bjw-s-labs.github.io/helm-charts
 
 releases:
   - name: jellyfin
