chore: migrate to new HDD

--- a/charts/automation/fileflows/values.yaml
+++ b/charts/automation/fileflows/values.yaml
@@ -56,6 +56,6 @@ persistence:
   storage2:
     enabled: true
     type: hostPath
-    hostPath: /mnt/onetb
+    hostPath: /mnt/nebula
     globalMounts:
-      - path: /media/onetb
+      - path: /media/nebula
