--- a/charts/media/bazarr/values.yaml
+++ b/charts/media/bazarr/values.yaml
@@ -25,15 +25,22 @@ persistence:
     hostPath: /appdata/k3s/bazarr
     globalMounts:
       - path: /config
-  storage:
+  nebula:
     enabled: true
     type: hostPath
-    hostPath: /storage
+    hostPath: /mnt/nebula
     globalMounts:
-      - path: /storage
-  storage2:
+      - path: /mnt/nebula
+
+ingress:
+  main:
     enabled: true
-    type: hostPath
-    hostPath: /mnt/onetb
-    globalMounts:
-      - path: /storage2
+    annotations:
+      traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    hosts:
+      - host: bazarr.hobroker.me
+        paths:
+          - path: /
+            pathType: Prefix
+            service:
+              identifier: main
