feat: replace `exportarr` with `scraparr`

--- a/charts/monitoring/scraparr/config/infisical-scraparr-secret.yaml
+++ b/charts/monitoring/scraparr/config/infisical-scraparr-secret.yaml
@@ -1,22 +1,22 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: infisical-exportarr-radarr-secret
-  namespace: self
+  name: infisical-scraparr-secret
+  namespace: monitoring
 spec:
   authentication:
     universalAuth:
       secretsScope:
         projectSlug: kira
         envSlug: prod
-        secretsPath: "/exportarr-radarr"
+        secretsPath: "/scraparr"
         recursive: true
       credentialsRef:
         secretName: universal-auth-credentials
         secretNamespace: infisical-operator-system
   managedKubeSecretReferences:
-    - secretName: infisical-exportarr-radarr-secret
-      secretNamespace: self
+    - secretName: infisical-scraparr-secret
+      secretNamespace: monitoring
       creationPolicy: "Owner"
       template:
         includeAllSecrets: true
