CI: use helmfile GitHub Action for linting

--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -1,2 +1,2 @@
 titleOnly: true
-targetUrl: https://github.com/Gamurar/biomarkly/wiki/Conventional-Commits
+targetUrl: https://www.conventionalcommits.org/en/v1.0.0/#summary
