--- a/charts/monitoring/grafana-backup/values.yaml
+++ b/charts/monitoring/grafana-backup/values.yaml
@@ -5,7 +5,7 @@ controllers:
   main:
     type: cronjob
     labels:
-      cronjob: biomarkly-database-backup
+      cronjob: grafana-backup
     strategy: RollingUpdate
     containers:
       main:
