--- a/charts/system/reloader/helmfile.yaml
+++ b/charts/system/reloader/helmfile.yaml
@@ -1,10 +1,10 @@
 repositories:
-  - name: reloader
+  - name: stakater
     url: https://stakater.github.io/stakater-charts
 
 releases:
   - name: reloader
-    version: 2.0.0
+    version: 2.2.7
     atomic: true
     namespace: kube-system
     chart: stakater/reloader
